# Allanite

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Allanite.h  Model.h  ModelLoader.h  Render.h
src/: Allanite.cpp  Allanite.h  Model.cpp  ModelLoader.cpp  Render.cpp  Render.h  main.cpp
